force-app/main/default/objects/Assignment_Group_Member__c/Assignment_Group_Member__c.object-meta.xml
<CustomObject>
    <label>Assignment Group Member</label>
    <nameField>
        <displayFormat>GM-{0000}</displayFormat>
        <label>Group Member</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignment Group Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>