force-app/main/default/objects/Assignment_Group_Member__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Tech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>