force-app/main/default/objects/Assignment_Group_Member__c/fields/GroupMember_AssignmentGroup__c.field-meta.xml
<CustomField>
    <fullName>GroupMember_AssignmentGroup__c</fullName>
    <formula>Group_Member__c +  Assignment_Group__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GroupMember_AssignmentGroup</label>
    <type>Text</type>
</CustomField>