force-app/main/default/objects/Assignment_Group_Member__c/fields/Member_Email__c.field-meta.xml
<CustomField>
    <fullName>Member_Email__c</fullName>
    <formula>Group_Member__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Email</label>
    <type>Text</type>
</CustomField>