force-app/main/default/objects/Assignment_Group_Member__c/fields/Out_Of_Office__c.field-meta.xml
<CustomField>
    <fullName>Out_Of_Office__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Out Of Office</label>
    <type>Checkbox</type>
</CustomField>