force-app/main/default/objects/Assignment_Group_Member__c/fields/SM__c.field-meta.xml
<CustomField>
    <fullName>SM__c</fullName>
    <formula>Group_Member__r.Manager.FirstName+&apos; &apos;+Group_Member__r.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SM</label>
    <type>Text</type>
</CustomField>