force-app/main/default/objects/Assignment_Group_Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Assignment_Group__c</columns>
    <columns>Group_Member__c</columns>
    <columns>Leave_Start_Date__c</columns>
    <columns>Leave_End_Date__c</columns>
    <columns>Max_Lead_Per_Day__c</columns>
    <columns>Out_Of_Office__c</columns>
    <columns>SM__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>